[project]
  name = "emotibot-relay"
  version = "0.1.0"
  description = "A mood relay service with HTTP and SSE support"
  authors = [{ name = "Bruno", email = "bruno@biasedbit.com" }]
  requires-python = ">=3.12"
  dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "typer>=0.9.0",
    "httpx>=0.25.0",
    "httpx-sse>=0.4.0",
  ]

  [project.optional-dependencies]
    dev = [
      "pytest>=7.4.0",
      "pytest-asyncio>=0.21.0",
      "httpx>=0.25.0",
      "mypy>=1.7.0",
      "ruff>=0.1.0",
    ]

  [project.scripts]
    emotibot-server = "emotibot_relay.server:main"
    mood-set = "emotibot_relay.cli:cli_set_mood"
    mood-get = "emotibot_relay.cli:cli_get_mood"
    mood-stream = "emotibot_relay.cli:cli_stream"

[build-system]
  requires = ["hatchling"]
  build-backend = "hatchling.build"

[tool.mypy]
  python_version = "3.12"
  strict = true
  warn_return_any = true
  warn_unused_configs = true

[tool.ruff]
  target-version = "py312"
  line-length = 88

  [tool.ruff.lint]
    select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
  asyncio_mode = "auto"
  testpaths = ["tests"]

[dependency-groups]
  dev = [
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.8",
  ]
